update Swagger documentation to add logout endpoint
